// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` camera mapping test  works as planned:  after Closing pop up  1`] = `
<div
  className="DirectorEle"
>
  {
  "cameras": [
    "c1bbbbbbbbbbbbbbbbbbbbbb",
    "c2bbbbbbbbbbbbbbbbbbbbbb",
    "c3bbbbbbbbbbbbbbbbbbbbbb"
  ],
  "operators": {
    "c1bbbbbbbbbbbbbbbbbbbbbb": [],
    "c2bbbbbbbbbbbbbbbbbbbbbb": [],
    "c3bbbbbbbbbbbbbbbbbbbbbb": []
  },
  "value": "c2bbbbbbbbbbbbbbbbbbbbbb",
  "showPopUp": false
}
</div>
`;

exports[` camera mapping test  works as planned:  after Fetching cameras  1`] = `
<div
  className="DirectorEle"
>
  {
  "cameras": [
    "c1bbbbbbbbbbbbbbbbbbbbbb",
    "c2bbbbbbbbbbbbbbbbbbbbbb",
    "c3bbbbbbbbbbbbbbbbbbbbbb"
  ],
  "operators": {
    "c1bbbbbbbbbbbbbbbbbbbbbb": [],
    "c2bbbbbbbbbbbbbbbbbbbbbb": [],
    "c3bbbbbbbbbbbbbbbbbbbbbb": []
  },
  "value": "c2bbbbbbbbbbbbbbbbbbbbbb",
  "showPopUp": false
}
</div>
`;

exports[` camera mapping test  works as planned:  after Opening pop up  1`] = `
<div
  className="DirectorEle"
>
  {
  "cameras": [
    "c1bbbbbbbbbbbbbbbbbbbbbb",
    "c2bbbbbbbbbbbbbbbbbbbbbb",
    "c3bbbbbbbbbbbbbbbbbbbbbb"
  ],
  "operators": {
    "c1bbbbbbbbbbbbbbbbbbbbbb": [],
    "c2bbbbbbbbbbbbbbbbbbbbbb": [],
    "c3bbbbbbbbbbbbbbbbbbbbbb": []
  },
  "value": "c2bbbbbbbbbbbbbbbbbbbbbb",
  "showPopUp": true
}
</div>
`;

exports[` camera mapping test  works as planned:  after Setting Camera  1`] = `
<div
  className="DirectorEle"
>
  {
  "cameras": [
    "c1bbbbbbbbbbbbbbbbbbbbbb",
    "c2bbbbbbbbbbbbbbbbbbbbbb",
    "c3bbbbbbbbbbbbbbbbbbbbbb"
  ],
  "operators": {
    "c1bbbbbbbbbbbbbbbbbbbbbb": [],
    "c2bbbbbbbbbbbbbbbbbbbbbb": [],
    "c3bbbbbbbbbbbbbbbbbbbbbb": []
  },
  "value": "c2bbbbbbbbbbbbbbbbbbbbbb",
  "showPopUp": false
}
</div>
`;

exports[` camera mapping test  works as planned:  after preparing cameras  1`] = `
<div
  className="DirectorEle"
>
  {
  "cameras": [
    "c1bbbbbbbbbbbbbbbbbbbbbb",
    "c2bbbbbbbbbbbbbbbbbbbbbb",
    "c3bbbbbbbbbbbbbbbbbbbbbb"
  ],
  "operators": {
    "c1bbbbbbbbbbbbbbbbbbbbbb": [],
    "c2bbbbbbbbbbbbbbbbbbbbbb": [],
    "c3bbbbbbbbbbbbbbbbbbbbbb": []
  },
  "showPopUp": false
}
</div>
`;

exports[` camera mapping test  works as planned: Before anything 1`] = `
<div
  className="DirectorEle"
>
  {
  "cameras": [],
  "operators": {},
  "showPopUp": false
}
</div>
`;
